syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

// DEVELOPERS NOTE:
// export GO_PATH=~/go
// export PATH=$PATH:/$GO_PATH/bin
// export PATH=$PATH:$GOPATH/bin
// $ cd ~/go/src/github.com/mikaponics/mikapod-soil-reader
// $ protoc --go_out=plugins=grpc:. api/reader.proto

service MikapodSoilReader {
    rpc GetData (PollSensorsRequest) returns (SensorsDataResponse) {}

    // https://grpc.io/docs/tutorials/basic/go/
}

message PollSensorsRequest {}

message SensorsDataResponse {
    bool status = 1;
    google.protobuf.Timestamp timestamp = 2;
    float humidityValue = 3;
    string humidityUnit = 4;
    float temperatureValue = 5;
    float temperatureUnit = 6;
    float pressureValue = 7;
    string pressureUnit = 8;
    float temperatureBackupValue = 9;
    string temperatureBackupUnit = 10;
    float altitudeValue = 11;
    string altitudeUnit = 12;
    float illuminanceValue = 13;
    string illuminanceUnit = 14;
    float soilMoistureValue = 15;
    string soilMoistureUnit = 16;
}
